test/kubernetes/e2e/features/local_rate_limit/testdata/route-local-rate-limit-disabled.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-rl-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: svc-route
  rateLimit:
    local: {}
